<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="settings">Настройки</string>
    <string name="library">Медиатека</string>
    <string name="search">Поиск</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="call_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="email_subtitle">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_link">https://practicum.yandex.ru/android-developer</string>
    <string name="email_address">test@example.com</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="update_button">Обновить</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="saved_tracks">Избранные треки</string>"
    <string name="playlists">Плейлисты</string>"
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_play_list">Вы не создали\nни одного плейлиста</string>
    <string name="empty_liked_tracks">Ваша медиатека пуста</string>
    <string name="new_playlist_title">Новый плейлист</string>
    <string name="new_playlist_name">Название*</string>
    <string name="new_playlist_description">Описание</string>
    <string name="new_playlist_create">Создать</string>
    <string name="new_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="new_playlist_dialog_cancel">Отмена</string>
    <string name="new_playlist_dialog_finish">Завершить</string>
    <string name="new_playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="new_playlist_toast">Плейлист %s создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="track_already_added">Трек уже добавлен в плейлист %s</string>
    <plurals name="track_amount">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minute_amount">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="dialog_remove_track_title">Хотите удалить трек?</string>
    <string name="dialog_remove_yes">да</string>
    <string name="dialog_remove_no">нет</string>
    <string name="toast_share_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="remove_playlist">Удалить плейлист</string>
    <string name="dialog_remove_playlist_title">Хотите удалить плейлист «%s»?</string>
    <string name="save">Сохранить</string>
</resources>
