<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/BlueBackgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:paddingBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            style="@style/YsDisplayMediumWhiteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/playlist_maker"

            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_container">

        <Button
            android:id="@+id/search_button"
            style="@style/WhiteBigButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/search"
            app:icon="@drawable/search"
            app:layout_constraintTop_toBottomOf="@+id/title_container" />

        <Button
            android:id="@+id/library_button"
            style="@style/WhiteBigButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/button_margin_top"
            android:text="@string/library"
            app:icon="@drawable/library"
            app:layout_constraintTop_toBottomOf="@+id/search_button" />

        <Button
            android:id="@+id/settings_button"
            style="@style/WhiteBigButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/button_margin_top"
            android:text="@string/settings"
            app:icon="@drawable/library"
            app:layout_constraintTop_toBottomOf="@+id/library_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
